# nvd-api

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: cvss3_high_and_critical.rs  cvss3_scope_cves.rs
nvd-models/: Cargo.toml  mod.rs
nvd-models/schema/: cvss-v3.0.json
nvd-models/schema/cpe/: cpe_api_schema_2.0.json
nvd-models/schema/cpe_match/: cpematch_api_2.0.json
nvd-models/schema/cve/: cve_api_schema_2.0.json  cvss-v2.0.json  cvss-v3.1.json
nvd-models/schema/cve_change_history/: cve_history_api_schema_2.0.json
nvd-models/src/: cpe.rs  cpe_match.rs  cve.rs  cve_api.rs  cve_history.rs  lib.rs
src/: common.rs  cpe.rs  cpe_match.rs  cve.rs  cve_api.rs  cve_change_history.rs  lib.rs
src/test_data/: cpe.json  cpe_match.json  cve.json  cve_change_history.json  response.json
tests/: config.rs  cpe_match_test.rs  cpe_test.rs  cve_change_history_test.rs  cve_test.rs
