[package]
name = "rsnvd"
version = "0.1.0"
authors = ["Samuele Resca <samuele.resca@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1.64"
chrono = "0.4"
percent-encoding = "2.2.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] } 
wiremock = "0.5.17"
