[package]
name = "nvd-api"
version = "0.1.0"
authors = ["Samuele Resca <samuele.resca@gmail.com>"]
edition = "2021"

[dependencies.nvd_models]
path = "./nvd-models/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"
chrono = "0.4"
percent-encoding = "2.2"
serde_json = "1.0"
uuid = "1.3.0"

[dev-dependencies]
tokio = { version = "1.25", features = ["rt-multi-thread", "macros"] } 
wiremock = "0.5"
